--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.13",
     "sass": "^1.54.4",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
