--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
+    "react-globe.gl": "^2.22.3",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
