--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "d3-dsv": "^3.0.1",
     "dayjs": "^1.11.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
-    "react-globe.gl": "^2.22.3",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
