--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
     "d3-dsv": "^3.0.1",
     "dayjs": "^1.11.5",
     "prop-types": "^15.8.1",
