--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "d3-dsv": "^3.0.1",
     "dayjs": "^1.11.5",
     "prop-types": "^15.8.1",
+    "public-ip": "^6.0.1",
     "react": "^18.2.0",
     "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
