--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.27.2",
     "d3-dsv": "^3.0.1",
     "dayjs": "^1.11.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "prop-types": "^15.8.1",
     "public-ip": "^6.0.1",
     "react": "^18.2.0",
