--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -29,7 +29,7 @@ jobs:
       - name: npm ci, build and test
         run: |
           npm install
-          npm CI= run build
+          CI= npm run build
       - name: deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
