--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-management-app",
   "version": "0.1.0",
+  "homepage": "https://maitocode.github.io/",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
