--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,18 +1,18 @@
-name: maitocode actions
+# name: maitocode actions
 
-on:
-  push:
-    branches: [develop]
+# on:
+#   push:
+#     branches: [develop]
 
-jobs:
-  test_and_deploy:
-    runs-on: self-hosted
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Down Containers
-        run: docker-compose -f docker-compose-deploy.yml down
-      - name: Build
-        run: docker-compose -f docker-compose-deploy.yml build
-      - name: run
-        run: docker-compose -f docker-compose-deploy.yml up -d
+# jobs:
+#   test_and_deploy:
+#     runs-on: self-hosted
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v2
+#       - name: Down Containers
+#         run: docker-compose -f docker-compose-deploy.yml down
+#       - name: Build
+#         run: docker-compose -f docker-compose-deploy.yml build
+#       - name: run
+#         run: docker-compose -f docker-compose-deploy.yml up -d
