--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jspdf": "^2.5.1",
     "prop-types": "^15.8.1",
     "public-ip": "^6.0.1",
+    "query-string": "^7.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
