--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "leetcode-query": "^0.2.5",
     "prop-types": "^15.8.1",
     "public-ip": "^6.0.1",
     "query-string": "^7.1.3",
