--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "dayjs": "^1.11.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
-    "leetcode-query": "^0.2.5",
     "prop-types": "^15.8.1",
     "public-ip": "^6.0.1",
     "query-string": "^7.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^3.4.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
