--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "maitocode",
-  "name": "maitocode",
+  "short_name": "qitpy",
+  "name": "qitpy",
   "icons": [
     {
       "src": "favicon.svg",
