--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-github-calendar": "^3.4.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "recharts": "^2.3.0",
