--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,18 +1,35 @@
-# name: qitpy actions
+name: Check ReactJS Build
 
-# on:
-#   push:
-#     branches: [develop]
+on:
+  pull_request:
+    branches:
+      - master
 
-# jobs:
-#   test_and_deploy:
-#     runs-on: self-hosted
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v2
-#       - name: Down Containers
-#         run: docker-compose -f docker-compose-deploy.yml down
-#       - name: Build
-#         run: docker-compose -f docker-compose-deploy.yml build
-#       - name: run
-#         run: docker-compose -f docker-compose-deploy.yml up -d
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 21.1.0 # Adjust the Node.js version to your project's requirements
+
+    - name: Install dependencies
+      run: yarn
+
+    - name: Build
+      run: yarn run build
+
+    - name: Verify build success
+      run: |
+        if [ -d "build" ]; then
+          echo "Build successful"
+          exit 0
+        else
+          echo "Build failed"
+          exit 1
+        fi
